Test PowerPoint Online embed

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <hr>
     <article>
       <section id="Presentation">
-        <iframe src="http://docs.google.com/gview?url=https://airicbear.github.io/werner-heisenberg/WernerHeisenberg.pptx&embedded=true"
-        frameborder="0" width="800" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe src="https://tesdnet-my.sharepoint.com/personal/19nguyene_tesdk12_net1/_layouts/15/Doc.aspx?sourcedoc={7bb4d5bb-de19-4441-b3a6-b44b0ee1522e}&amp;action=embedview&amp;wdAr=1.7777777777777777"
+          width=800 height=400 frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft
+            Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office Online</a>.</iframe>
       </section>
       <section id="About">
         <h2>About</h2>
@@ -48,11 +49,13 @@
       </section>
       <section id="QuantumMechanics">
         <h2>Quantum Mechanics</h2>
-        <p>Quantum mechanics deals with quantized measurements, rather than continuous measurements which classical mechanics uses.</p>
+        <p>Quantum mechanics deals with quantized measurements, rather than continuous measurements which classical
+          mechanics uses.</p>
       </section>
       <section id="UncertaintyPrinciple">
         <h2>Uncertainty Principle</h2>
-        <p>Heisenberg's uncertainty principle states that an observer of a particle cannot accurately determine both its position and speed.</p>
+        <p>Heisenberg's uncertainty principle states that an observer of a particle cannot accurately determine both
+          its position and speed.</p>
       </section>
       <section id="NuclearFission">
         <h2>Nuclear Fission</h2>
@@ -60,7 +63,8 @@
       </section>
       <section id="MatrixMechanics">
         <h2>Matrix Mechanics</h2>
-        <p>Matrix mechanics is a formulation of Heisenberg, which accomplishes the same tasks as the Schrödinger equation.</p>
+        <p>Matrix mechanics is a formulation of Heisenberg, which accomplishes the same tasks as the Schrödinger
+          equation.</p>
       </section>
     </article>
     <footer>
