--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <hr>
     <article>
       <section id="Presentation">
-        <iframe src="https://tesdnet-my.sharepoint.com/personal/19nguyene_tesdk12_net1/_layouts/15/Doc.aspx?sourcedoc={7bb4d5bb-de19-4441-b3a6-b44b0ee1522e}&amp;action=embedview&amp;wdAr=1.7777777777777777"
-          width=800 height=400 frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft
-            Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office Online</a>.</iframe>
+        <iframe src="https://docs.google.com/a/students.cciu.org/presentation/d/e/2PACX-1vSn0RvRKcG5peXVXySfkPL4pXhJAtXUeDL48miAkGQzdt_v6Hv5tB31hibw6Oc1cMs9jTfxGYb_0rPG/embed?start=false&loop=false&delayms=3000"
+          frameborder="0" width="659" height="400" allowfullscreen="true" mozallowfullscreen="true"
+          webkitallowfullscreen="true"></iframe>
       </section>
       <section id="About">
         <h2>About</h2>
